Privacy policy, file uploader, author form init

--- a/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
+++ b/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
@@ -9,7 +9,7 @@
             <a class="rel" routerLink="/publishers/{{inputItem?.Publisher}}">Editorial: {{Publisher?.Name}}</a>
             <a>Precio: {{inputItem?.Price}}€</a>
             <app-app-star-rating [Rating]="Rating"></app-app-star-rating>
-            <br>
+            <div class="divider"></div>
             <button class="btn btn-primary" [routerLink]="['/book', inputItem?.ISBN]">Ver Ahora</button>
         </div>
     </div>
