--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <app-topbar></app-topbar>
 <app-linear-carousel header_name="Ultimos Lanzamientos"></app-linear-carousel>
 <router-outlet />
+<app-footer></app-footer>
