--- a/src/app/pages/publisher/publisher.component.html
+++ b/src/app/pages/publisher/publisher.component.html
@@ -14,3 +14,5 @@
         <app-linear-carousel [book_buffer]="bookBuffer" [prepackedData]="true"></app-linear-carousel>
     </div>
 }
+
+<app-footer></app-footer>
