--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -253,6 +253,10 @@
 				{
 					<app-category-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-category-form>
 				}
+				@case(10)
+				{
+					<app-file-uploader class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-file-uploader>
+				}
 				@default
 				{
 				<div
