--- a/src/app/components/popups/book-popup/book-popup.component.html
+++ b/src/app/components/popups/book-popup/book-popup.component.html
@@ -28,8 +28,19 @@
         </select>
       </span>
       <span>
-        Editorial: <input [(ngModel)]="local_libro.Publisher" class="input hover:input-solid flex-shrink"
-          placeholder="Editorial" type="number">
+        Editorial: <select [(ngModel)]="local_libro.Publisher" class="input">
+          @for (item of publishers; track $index)
+          {
+          @if(local_libro.Publisher == item.PublisherId)
+          {
+          <option [value]="item.PublisherId" selected>{{item.PublisherId}} - {{item.Name}}</option>
+          }
+          @else
+          {
+          <option [value]="item.PublisherId">{{item.PublisherId}} - {{item.Name}}</option>
+          }
+          }
+        </select>
       </span>
       <span>
         Fecha de Lanzamiento: <input class="input hover:input-solid flex-shrink" placeholder="Fecha de Lanzamiento"
