--- a/src/app/pages/config/config.component.html
+++ b/src/app/pages/config/config.component.html
@@ -1,2 +1,64 @@
 <app-topbar></app-topbar>
-<p>User Config panel</p>
+<!-- user-settings.component.html -->
+<div class="max-w-lg mx-auto mt-10 p-6 card rounded-lg shadow-md">
+    <h2 class="text-2xl font-semibold mb-6 text-center">Configuración del usuario</h2>
+    <div class="mb-4">
+        <label class="block text-sm font-medium mb-1" for="email">Email</label>
+        <input
+          id="email"
+          name="email"
+          type="email"
+          [(ngModel)]="user.email"
+          required
+          class="input input-bordered w-full"
+        />
+      </div>
+  
+      <div class="mb-4">
+        <label class="block text-sm font-medium mb-1" for="profilePicture">Foto de perfil <span class="inline text-[8px] text-gray-500 leading-tight mt-1">(Use una URL o subala al sitio web! (la foto de perfil anterior se eliminara de nuestro disco duro.))</span></label>
+        <input
+          id="profilePicture"
+          name="profilePicture"
+          type="url"
+          [(ngModel)]="user.profile_picture"
+          class="input input-bordered w-full"
+        />
+        <img [src]="user.profile_picture" alt="Profile Preview" class="avatar left-5 avatar-ring avatar-md" />
+        <input class="input-file mt-5" type="file" accept="image/*" (change)="onFileSelected($event)">
+        <button class="ml-5 btn btn-solid-primary hover:btn-primary" (click)="submitFile()" [disabled]="file == null">Subir</button>
+      </div>
+  
+      <div class="mb-4">
+        <label class="block text-sm font-medium mb-1" for="username">Nombre de usuario</label>
+        <input
+          id="username"
+          name="username"
+          type="text"
+          [(ngModel)]="user.username"
+          required
+          class="input input-bordered w-full"
+        />
+      </div>
+  
+      <div class="mb-6">
+        <label class="block text-sm font-medium mb-1" for="password">Contraseña</label>
+        <input
+          id="password"
+          name="password"
+          type="password"
+          [(ngModel)]="user.password"
+          required
+          class="input input-bordered w-full"
+        />
+      </div>
+  
+      <button
+        type="submit"
+        class="btn btn-primary w-full"
+        (click)="onSubmit()"
+      >
+        Actualizar Perfil
+      </button>
+  </div>
+  
+  <app-footer></app-footer>
