--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet />
 <app-error-popup></app-error-popup>
+<app-info-popup></app-info-popup>
 <app-ask-user-popup></app-ask-user-popup>
