--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -244,6 +244,10 @@
 				<app-add-libro-form
 					class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-add-libro-form>
 				}
+				@case(2)
+				{
+					<app-add-author-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-add-author-form>
+				}
 				@case(6)
 				{
 				<app-log-form
