--- a/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
+++ b/src/app/components/child_components/carousel-book-item/carousel-book-item.component.html
@@ -1,7 +1,7 @@
 <div class="card flexbox desktop-only">
     <div class="card-body image gap-5">
         <div class="w-64 h-80">
-        <img class="h-full w-full object-contain" [src]="inputItem?.Image">
+        <img class="h-full w-full object-contain place-self-center" [src]="inputItem?.Image">
         </div>
         <p class="center">{{inputItem?.Name}}</p>
         <div class="flex_container">
