--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 @if(!isOverflowing)
 {
-<footer class="navbar rounded-lg mt-10 mb-[2px]">
+<footer class="navbar rounded-lg bottom-0 fixed">
 	<div class="navbar-start">
-		<a class="link link-primary" [routerLink]="['/home']">TodoLibro &copy; 2025-2026</a>
+		<a class="link link-primary" [routerLink]="['/home']">TodoLibro &copy; 2024-2025</a>
 	</div>
 	<div class="navbar-center">
 		<a class="link link-primary" [routerLink]="['/privacy-policy']">Politica de privacidad de datos</a>
@@ -16,9 +16,9 @@
 }
 @else
 {
-<footer class="navbar rounded-lg bottom-0 mb-[2px] fixed">
+<footer class="navbar rounded-lg mt-10 mb-[2px]">
 	<div class="navbar-start">
-		<a class="link link-primary" [routerLink]="['/home']">TodoLibro &copy; 2025-2026</a>
+		<a class="link link-primary" [routerLink]="['/home']">TodoLibro &copy; 2024-2025</a>
 	</div>
 	<div class="navbar-center">
 		<a class="link link-primary" [routerLink]="['/privacy-policy']">Politica de privacidad de datos</a>
