--- a/src/app/pages/filter-book/filter-book.component.html
+++ b/src/app/pages/filter-book/filter-book.component.html
@@ -2,7 +2,7 @@
 
 @if (libros && libros.length > 0)
 {
-    <div class="flex w-full h-full overflow-hidden flex-row gap-5 p-5">
+    <div class="flex w-full h-full overflow-hidden flex-row gap-5 p-5 flex-wrap">
         @for (libro of libros; track $index) 
         {
             <app-libro-entry [libro]="libro"></app-libro-entry>
