categorize form, categorize table, admin sidebar, libro entry updates

--- a/src/app/components/admin/tables/book-table/book-table.component.html
+++ b/src/app/components/admin/tables/book-table/book-table.component.html
@@ -25,11 +25,11 @@
             <tr>
                 <td>{{item.ISBN}}</td>
                 <td>{{item.Name}}</td>
-                <td class="tooltip tooltip-top" [attr.data-tooltip]="">
+                <td class="tooltip tooltip-top" [attr.data-tooltip]="getOrSaveAuthorName(item.Author)">
                     {{item.Author}}
                 </td>
 
-                <td class="tooltip tooltip-top" [attr.data-tooltip]="">
+                <td class="tooltip tooltip-top" [attr.data-tooltip]="getOrSavePublisherName(item.Publisher)">
                     {{item.Publisher}}
                 </td>
                 <td>
