--- a/src/app/components/filter/libro-entry/libro-entry.component.html
+++ b/src/app/components/filter/libro-entry/libro-entry.component.html
@@ -22,8 +22,7 @@
                 }
                 @else
                 {
-                <button class="btn btn-solid-error text-sm" (click)="removeFromFavorites();">Eliminar de
-                    favoritos</button>
+                <button class="btn btn-solid-error text-sm" (click)="removeFromFavorites();">Eliminar de favoritos</button>
                 }
                 <button class="btn btn-solid-warning text-sm">Añadir a una estanteria</button>
             </div>
