--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -114,7 +114,7 @@
 									</path>
 								</g>
 							</svg>
-							<span>Comentarios</span>
+							<span>Reseñas</span>
 						</li>
 						}
 
