--- a/src/app/pages/cart-checkout/cart-checkout.component.html
+++ b/src/app/pages/cart-checkout/cart-checkout.component.html
@@ -1,13 +1,14 @@
 <app-topbar></app-topbar>
 
 <div class="p-5 w-svw h-svw">
-    <div class="card p-5 min-w-full min-h-full max-w-full max-h-full">
+    <div class="card p-5 min-w-full min-h-full max-w-full max-h-full flex">
         <div class="justify-items-center">
             <app-glowing-text class="text-center" textContent="Carrito"></app-glowing-text>
         </div>
         <div class="divider"></div>
 
-        <main class="w-full h-full">
+       <div class="flex flex-row gap-5">
+        <main class="w-2/3 h-full float-left">
             <div class="flex w-full overflow-x-auto">
                 <table class="table table-zebra">
                     <thead>
@@ -48,6 +49,11 @@
                                 <td>{{fixNumbers(getPrecio(item.Books_ISBN, item.Quantity))}}€</td>
                             </tr>
                         }
+                        <tr>
+                            <td>Total:</td>
+                            <td></td>
+                            <td>{{fixNumbers(getPrecioTotal())}}€</td>
+                        </tr>
                         }
                         <tr>
 
@@ -56,6 +62,10 @@
                 </table>
             </div>
         </main>
+        <aside class="w-1/3 float-right">
+            <app-component-purchase></app-component-purchase>
+        </aside>
+       </div>
     </div>
 </div>
 
