--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <app-topbar></app-topbar>
 
 <div class="p-5 w-svw h-svw">
-    <div class="card p-5 min-w-full min-h-full max-w-full max-h-full">
+    <div class="p-5 min-w-full min-h-full max-w-full max-h-full">
         <div class="justify-items-center">
             <app-glowing-text class="text-center" textContent="Favoritos"></app-glowing-text>
         </div>
@@ -12,7 +12,7 @@
         }
         @else 
         {    
-        <div class="flex w-full h-full overflow-hidden flex-row gap-5 p-5">
+        <div class="flex w-full h-full overflow-hidden flex-row gap-5">
             @for (item of libros; track index) {
                 <app-libro-entry [libro]="item" [showFavoriteButton]="false" (onFavoritesRemoved)="onFavoritesRemoved(item)"></app-libro-entry>
             }
