--- a/src/app/pages/libro/libro.component.html
+++ b/src/app/pages/libro/libro.component.html
@@ -44,7 +44,7 @@
 
         @if(libro.Stock > 0)
         {
-            <button class="btn btn-outline-primary flex-grow">
+            <button class="btn btn-outline-primary flex-grow" (click)="onPurchaseClicked();">
                 <fa-icon [icon]="storeIcon"></fa-icon>&nbsp;Comprar
             </button>
             <button class="btn btn-outline-success flex-grow" (click)="addToCarrito();">
