--- a/src/app/pages/cart-checkout/cart-checkout.component.html
+++ b/src/app/pages/cart-checkout/cart-checkout.component.html
@@ -7,8 +7,8 @@
         </div>
         <div class="divider"></div>
 
-       <div class="flex flex-row gap-5">
-        <main class="w-2/3 h-full float-left">
+       <div class="flex flex-col gap-5 md:flex-row">
+        <main class="w-full h-full float-left md:w-2/3">
             <div class="flex w-full overflow-x-auto">
                 <table class="table table-zebra">
                     <thead>
@@ -62,7 +62,7 @@
                 </table>
             </div>
         </main>
-        <aside class="w-1/3 float-right">
+        <aside class="w-auto float-right md:w-1/3">
             <app-component-purchase></app-component-purchase>
         </aside>
        </div>
