--- a/src/app/pages/purchase/purchase.component.html
+++ b/src/app/pages/purchase/purchase.component.html
@@ -1,3 +1,47 @@
 <app-topbar></app-topbar>
-<p>purchase works!</p>
+<div class="flex w-svw h-svw grid-cols-3 grid-rows-1 gap-1 border-2 p-5 border-solid border-border bg-gray-1 layout">
+    <div class="w-full h-full">
+        <img [src]="libro?.Image" class="w-full h-full object-contain bg-gray-1 border-2">
+    </div>
+    <div class="flex-grow block p-5 border-solid border-border bg-gray-1 border-2">
+        <h1 class="text-center font-bold text-xl backdrop-blur-md">
+            <h1 class="justify-center text-center font-bold text-xl blur-md m-0 left-0 right-0 absolute">
+                {{libro?.Name}}
+            </h1>
+            {{libro?.Name}}
+        </h1>
+        <div class="divider"></div>
+        <p>
+            {{libro?.Synopsis}}
+        </p>
+        
+        <div class="divider"></div>
+
+        <div class="block">
+            Autor: <a [routerLink]="['/author', libro?.Author]">{{authorName}}</a>
+            <br>
+            Editorial: <a [routerLink]="['/publishers', libro?.Publisher]">{{publisherName}}</a>
+            <br>
+            Fecha de Lanzamiento: <a>{{libro?.LaunchDate}}</a>
+            <br>
+            <app-app-star-rating [Rating]="rating"></app-app-star-rating>
+        </div>
+
+        <div class="divider"></div>
+    </div>
+    <div class="flex card p-5 flex-shrink fit-screen flex-colum">
+
+        <h1 class="text-center font-bold text-xl self-center">
+            Precio: {{libro?.Price}}€
+        </h1>
+        <div class="divider"></div>
+
+        <app-credit-card class="self-center" #cardRef></app-credit-card>
+        <div class="flex flex-row gap-5 self-center mt-5">
+            <button class="btn btn-solid-primary hover:btn-primary" (click)="onPurchase();"
+                (submit)="onPurchase();">Comprar</button>
+            <button class="btn btn-solid-error hover:btn-error" (click)="clearDetails();">Clear</button>
+        </div>
+    </div>
+</div>
 <app-footer></app-footer>
