updated purchase component, reworked publisher, author and author

--- a/src/app/pages/author/author.component.html
+++ b/src/app/pages/author/author.component.html
@@ -11,8 +11,15 @@
         <app-glowing-text class="w-full justify-center text-center" [textContent]="author.Name"></app-glowing-text>
     </div>
     <div class="flex w-full h-full">
-        <app-linear-carousel [book_buffer]="bookBuffer" [prepackedData]="true"></app-linear-carousel>
+        <app-linear-carousel [book_buffer]="mostPurchasedBooks" header_name="Los mas comprados" [prepackedData]="true"></app-linear-carousel>
     </div>
+
+    <div class="flex w-full h-full flex-row p-5 gap-5">
+        @for (item of bookBuffer; track $index) {
+            <app-libro-entry [libro]="item"></app-libro-entry>
+        }
+    </div>
+
 }
 
 <app-footer></app-footer>
