--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <app-topbar></app-topbar>
 <div class="flex flex-col gap-5">
+    <app-linear-carousel [book_buffer]="masComprados" [prepackedData]="true" header_name="Los mas comprados"></app-linear-carousel>
+
     <app-linear-carousel header_name="Ultimos Lanzamientos"></app-linear-carousel>
 
     @if(userLoggedIn)
