Updated admin sidebar, added publisher crud

--- a/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin/admin-sidebar/admin-sidebar.component.html
@@ -248,6 +248,10 @@
 				{
 					<app-add-author-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-add-author-form>
 				}
+				@case(3)
+				{
+					<app-add-publisher-form class="flex h-full w-full border-2 border-solid border-border bg-gray-1 p-5"></app-add-publisher-form>
+				}
 				@case(6)
 				{
 				<app-log-form
