--- a/src/app/pages/author/author.component.html
+++ b/src/app/pages/author/author.component.html
@@ -10,9 +10,13 @@
     <div class="flex w-full h-full">
         <app-glowing-text class="w-full justify-center text-center" [textContent]="author.Name"></app-glowing-text>
     </div>
+
+    @if(mostPurchasedBooks.length > 0)
+    {
     <div class="flex w-full h-full">
         <app-linear-carousel [book_buffer]="mostPurchasedBooks" header_name="Los mas comprados" [prepackedData]="true"></app-linear-carousel>
     </div>
+    }
 
     <div class="flex w-full h-full flex-row p-5 gap-5">
         @for (item of bookBuffer; track $index) {
